syntax = "proto3";

package code_judger;

service CodeJudger {
    rpc JudgeCode (JudgeRequest) returns (JudgeResponse);
}

message JudgeRequest {
    string code = 1;
    string language = 2;
    string version = 3;
    int32 timeout_seconds = 4;
    int32 memory_limit_mb = 5;
    repeated string input = 6;
    repeated string expected_output = 7;
}

message JudgeResponse {
    bool correct = 1;
    string actual_output = 2;
    string expected_output = 3;
    string stdout = 4;
    string stderr = 5;
    double execution_time_ms = 6;
    int32 memory_used_kb = 7;
    string error_message = 8;
    JudgeStatus status = 9;
}

enum JudgeStatus {
    JUDGE_UNKNOWN = 0;
    JUDGE_CORRECT = 1;
    JUDGE_WRONG = 2;
    JUDGE_TIMEOUT = 3;
    JUDGE_MEMORY = 4;
    JUDGE_ERROR = 5;
}
